--- a/settings.json
+++ b/settings.json
@@ -1,37 +1,1 @@
-{
-  "size": {
-    "value": 57,
-    "min": 10,
-    "max": 50
-  },
-  "velocity": {
-    "value": 100,
-    "min": 10,
-    "max": 150
-  },
-  "count": {
-    "value": 100,
-    "min": 5,
-    "max": 15
-  },
-  "vector scale": {
-    "value": 3,
-    "min": 0.1,
-    "max": 2
-  },
-  "red density": {
-    "value": 3,
-    "min": 0.1,
-    "max": 2
-  },
-  "green density": {
-    "value": 3,
-    "min": 0.1,
-    "max": 2
-  },
-  "blue density": {
-    "value": 3,
-    "min": 0.1,
-    "max": 2
-  }
-}
+{"size": {"value": 57, "min": 10, "max": 50}, "velocity": {"value": 100, "min": 10, "max": 150}, "count": {"value": 100, "min": 5, "max": 15}, "vector scale": {"value": 3, "min": 0.1, "max": 2}, "red density": {"value": 3, "min": 0.1, "max": 2}, "green density": {"value": 3, "min": 0.1, "max": 2}, "blue density": {"value": 3, "min": 0.1, "max": 2}}
